EVE CORE
http://almende.github.com/eve/

<not yet released>, version 0.7

- Added a convenience method send(url, method, params, type) to the JSONRPC 
  class


2012-07-03, version 0.6

- Updated agents web interface
- Added JSON-RPC class validation
- Changed the Context: it now extends Map, which allows for better/easier Java
  integration.
- FileContext created. Stores agents data on disk.
- Agents interface improved: methods-form now handles parameter types correctly.
- fixed a bug in JSONRPC which wrongly identified List and Set as a primitive 
  types.


2012-06-08, version 0.5

- Context adjusted:
  - return type must now be provided when getting a parameter
  - put method now returns a boolean with the success value.
- Session class added, containing the raw http request and response


2012-06-01, version 0.4

- Changed the JSON deserialization to allow non-matched fields
- Small changes


2012-05-29, version 0.3

- Fixed a bug in JSONResponse, not throwing an error when in the response
- Changed JSONResponse: getResult now requires to specify the return type.
  This is necessary for correct deserialization.
- An agents web interface can now handle resources
- The library includes the required javascript libraries (jquery, angularjs)
  used for the agents web interface.


2012-05-21, version 0.2

- Implemented configuration file using YAML


2012-05-14, version 0.1

- Servlets implemented for hosting agents
- Base class Agent created
- JSON-RPC implemented
- HTML interface for agents implemented
- Context implemented
- Events implemented (subscribe/unsubscribe/trigger)
- Schedular implemented
- Example agents implemented