@@ -17,7 +17,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>SingleAgentServlet</servlet-name>
-    <url-pattern>/testagent</url-pattern>
+    <url-pattern>/testagent/*</url-pattern>
   </servlet-mapping>
 
   <servlet>
